objects/CRMforNonProfit__InboundEmailRecord__c.object
<CustomObject>
    <description>Záznam o příchozím emailu</description>
    <fields>
        <fullName>CRMforNonProfit__Email_body__c</fullName>
        <label>Email body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Error_text__c</fullName>
        <label>Error text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__From__c</fullName>
        <description>Email address, that was the email sent from.</description>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Status__c</fullName>
        <description>Email processing state</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                    <default>true</default>
                    <label>Received</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Error in parsing</fullName>
                </value>
                <value>
                    <fullName>Error in pairing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Subject__c</fullName>
        <description>Subject of the email</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inbound email</label>
    <listViews>
        <fullName>CRMforNonProfit__All</fullName>
        <columns>NAME</columns>
        <columns>CRMforNonProfit__Subject__c</columns>
        <columns>CRMforNonProfit__Status__c</columns>
        <columns>CRMforNonProfit__From__c</columns>
        <columns>CRMforNonProfit__Error_text__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Inbound email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inbound email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>